temp/objects/C501_Guest_Update__c.object
<CustomObject>
    <fields>
        <fullName>C501_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest Updates</relationshipLabel>
        <relationshipName>Guest_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Email_Opt_Out_Text__c</fullName>
        <label>Email Opt Out Text</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_SMS_Opt_Out_Text__c</fullName>
        <label>SMS Opt Out Text</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Guest Update</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GU-{0000}</displayFormat>
        <label>Guest Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>